# serde_edn

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
benches/: bench.rs  canada.edn  twitter-kw.edn  twitter.edn
macros/: Cargo.toml
macros/src/: lib.rs
macros/test/: test.rs
src/: de.rs  edn_de.rs  edn_ser.rs  error.rs  keyword.rs  lib.rs  list.rs  macros.rs  map.rs  number.rs  raw.rs  read.rs  ser.rs  set.rs  symbol.rs  visitor.rs
src/value/: de.rs  from.rs  index.rs  mod.rs  ser.rs
tests/: compiletest.rs  debug.rs  edn_test.rs  preserve_order.rs  stream.rs  test.rs
tests/macros/: mod.rs
tests/ui/: missing_colon.rs  missing_colon.stderr  missing_value.rs  missing_value.stderr  not_found.rs  not_found.stderr  parse_expr.rs  parse_expr.stderr  parse_key.rs  parse_key.stderr  unexpected_after_array_element.rs  unexpected_after_array_element.stderr  unexpected_after_map_entry.rs  unexpected_after_map_entry.stderr  unexpected_colon.rs  unexpected_colon.stderr  unexpected_comma.rs  unexpected_comma.stderr
