[package]
name = "serde_edn_macros"
version = "0.1.0"
authors = ["Alex Dixon <alex@conarrative.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.10"
proc-macro2 = {version = "0.4.0", features=["nightly"]}
syn =  {version = "0.15.24", features = ["full"]}



[dev-dependencies]
#serde_edn = { path = "../" }

